More DX of clipping issues

--- a/src/app/d3Bindings/eventDistribution/_eventDistribution.scss
+++ b/src/app/d3Bindings/eventDistribution/_eventDistribution.scss
@@ -12,7 +12,7 @@ event-distribution-overview, event-distribution-detail {
     fill: black;
 
     & * {
-      shape-rendering: crispEdges;
+      //shape-rendering: crispEdges;
     }
   }
 
